<resources>
    <string name="app_name">DisApp</string>
    <string name="title_activity_navigation">navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_developers">Developers</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="btnsignin">Sign In</string>
    <string name="Muzi">Android Studio</string>
    <string name="textaccount">Forgot your password?</string>
    <string name="textsignup">Sign Up</string>
    <string name="btnsignup">Sign in</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="contact">contact</string>
    <string name="address">Address</string>
    <string name="restuarantId">restaurantID</string>
    <string name="phoneNumber">Phone number</string>
    <string name="company">Company</string>
    <string name="signup">Sign up</string>
    <string name="food">Pap meat :R20.00</string>
    <string name="foodmenu">foodmenu</string>
    <string name="kaua">kaua</string>
    <string name="mugg">mugg</string>
    <string name="nandos">nandos</string>
    <string name="burger">burger</string>
    <string name="forgot">Forgot Your Password?</string>
    <string name="emailme">Enter your Email to reset Your Password.</string>
    <string name="goodfood">Welcome to Dish Hub where \n good food cost less</string>

    <string name="saviour">"Saviour Molatudi 19 year old from Mpumalanga Studied at University of Limpopo"</string>
    <string name="Lerato">"Lerato Mothupi  23 year old from Limpopo Studied at University of Pretoria"</string>
    <string name="muzi">"Muzi Ngobe \na 25 year old \nfrom Gauteng \nStudied at University of Kwazulu Natal"</string>
    <string name="justice">"Justice Madlopha  22 year old from Mpumalanga Studied at University of Mpumalanga"</string>
    <string name="about">
We believe that eating healthy and nutritious food can be delicious and decadent, which is why we source the best ingredients and prepare our food fresh to help you live an amaZING! life.
We are a small group of people with a big dream to change the world one meal at a time - a dream driven by passion for the best of what life has to offer, from the lettuce in our salad to the Zing! in our step.SERVICE
We have a crush on our customers and we NEVER take them for granted.We pamper them, listen to them and will bend over backwards to make them happy
SOLUTIONS
We always push the boundaries to ensure that our service and products are fresh,innovative and unique.
We strive to stay ahead of our own game</string>
    <string name="title_activity_customer_navigation">CustomerNavigation</string>


</resources>
