<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:background="@drawable/green"
    tools:context="com.example.codetribe.disapp.HomeActivity"
    android:gravity="center_vertical">


    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_vertical"
        android:background="#FFF"
        android:hint="@string/username"
        android:textColorHint="#a2abaf"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#FFF"
        android:textColorHint="#a2abaf"
        android:layout_marginTop="10dp"
        android:hint="@string/password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textaccount"
        android:id="@+id/textView9"

        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textsignup"
        android:layout_marginTop="5dp"
        android:id="@+id/textView10"
        android:layout_gravity="center_horizontal" />

    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnsignup"
        android:id="@+id/btnSignin"
        android:scaleType="centerCrop"
        android:background="@drawable/btngreen"
        android:layout_marginTop="100dp"
         />
</LinearLayout>
